i18n(fix) Korean translation error

--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -89,9 +89,9 @@
   "settings5": "최상의 솔루션 만",
   "settings6": "메인 스토리 만 포함",
   "theme": "테마",
-  "theme1": "다음 시스템",
-  "theme2": "항상 밝은 색",
-  "theme3": "항상 어두운 색",
+  "theme1": "자동",
+  "theme2": "라이트 모드",
+  "theme3": " 다크 모드",
   "theme4": "일반 색상",
   "stageText": "탐구",
   "effiText": "효율성",
