feat(add) discord stuff and notification

--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -104,5 +104,6 @@
   "recommend": "via Synthesis",
   "finite":"finite exchange",
   "infinite":"infinite exchange",
-  "dataSource":"Data Source"
+  "dataSource":"Data Source",
+  "discord":"Join us on Discord"
 }
