--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -105,5 +105,6 @@
   "otherStages":"其他副本",
   "recommend":"建议合成",
   "finite":"有限池",
-  "infinite":"无限池"
+  "infinite":"无限池",
+  "discord":"加入我们的Discord"
 }
