--- a/client/src/lang/zh_Hant.json
+++ b/client/src/lang/zh_Hant.json
@@ -104,5 +104,6 @@
   "recommend":"建議合成",
   "finite":"有限兌換",
   "infinite":"無限兌換",
-  "dataSource": "數據來源"
+  "dataSource": "數據來源",
+  "discord":"加入我們的Discord"
 }
