--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -56,54 +56,55 @@
   "32001": "SoC強化剤",
   "title": "- アークワングラフ",
   "license1": "アークワングラフは",
-  "license2": "表示-非営利4.0国際",
-  "license3": "によってライセンスされています.",
-  "source": "材料サプライヤー",
-  "penguin": "ペンギン急便データ",
+  "license2": "クリエイティブ・コモンズ 表示 - 非営利 4.0 国際",
+  "license3": "の下に提供されています。",
+  "source": "素材出典",
+  "penguin": "ペンギン急便データ統計部門",
   "algorithm": "アルゴリズム",
   "nga": "NGAワングラフ",
-  "arknights": "アークナイツ工具箱",
+  "arknights": "Arknights Toolbox",
   "developers": "デベロッパー",
   "frontend": "フロントエンド/日本語化/英語化",
   "frontend2": "フロントエンド",
   "backend": "バックエンド",
-  "last": "最後のデータ更新",
+  "last": "最終更新",
   "yellowStore": "上級資格証交換物",
-  "greenStore": "一般資格証交換物ｰ段階二",
+  "greenStore": "一般資格証交換物段・2段目",
   "creditStore": "FP交換所",
-  "notes": "メモ",
-  "noteText1": "これらの値は、１つの一般資格証、１つの上級資格証、または１００FPの理智に対応してます。",
-  "noteText2": "上から順に、クエストの後に​​続く数値は、ドロップ率、理智の効率、およびドロップごとの予想の理智です。",
-  "noteText3": "赤：（クエストの）効率は99％を超えています。すべてのオペレーターを全部育成してを目指しており、このクエストで周回することは理智が最も少なくなります。",
-  "noteText4": "オレンジ：（クエストの）効率は90％を超えます。理智の効率は、時間とドロップ率のバランスが取れています",
-  "noteText5": "青：ドロップ率が最も高いクエスト。それらのクエストを周回すると、理智が高まります。",
-  "extraDrop": "エクストラドロップ",
+  "notes": "説明",
+  "noteText1": "上級資格証・一般資格証・FP交換所での値は、上級資格証：1枚/一般資格証：1/FP：100にて理性値に対応しています。",
+  "noteText2": "ステージNo.後の値は、上から順に、ドロップ率、理性効率、１ドロップごとにかかる統計上の理性。",
+  "noteText3": "【赤】理性効率：99％以上。'育成'するオペレーターが多く残っている場合、このステージの周回が最も消費理性を抑えることができる。",
+  "noteText4": "【橙】理性効率：90％以上。理性消費・時間効率・ドロップ率のバランスが取れたステージ。",
+  "noteText5": "【青】目的素材のドロップ率が高いステージ。使用目的が限られている場合、１素材自体の入手効率は最も高いが、理性の消費が多く、総合的な'育成'効率が悪くなる場合がある",
+  "extraDrop": "追加ドロップ",
   "dropRate": "ドロップ率",
-  "efficiency": "理智効率",
-  "expected": "予想の理智",
+  "efficiency": "理性効率",
+  "expected": "1ドロップ当たりの理性",
   "settings": "設定",
   "settings1": "詳細モード",
-  "settings2": "すべてを示す",
-  "settings3": "イベントを含める",
+  "settings2": "全て表示する",
+  "settings3": "イベントステージを含む",
   "settings4": "シンプルモード",
-  "settings5": "最良のソリューションのみ",
+  "settings5": "最効率のみ表示する",
   "settings6": "メインステージのみ",
   "theme": "スタイル",
   "theme1": "システムに従う",
-  "theme2": "常にライトモード",
-  "theme3": "常にダークモード",
-  "theme4": "通常の色",
+  "theme2": "ライトモード",
+  "theme3": "ダークモード",
+  "theme4": "デフォルトカラー",
   "stageText": "クエスト",
   "effiText": "効率",
   "local1": "韓国語化",
-  "noteText6": " ",
+  "noteText6": "上記での'育成'の定義はすべてのスキルの特化Ⅲ及びカンストする事を指す。",
   "value": "価値",
   "higher": "が高い",
-  "worth": "交換の優先度が高くなります",
-  "otherStages":"他のクエスト",
-  "recommend": "合成が推奨",
-  "finite":"有限の交換",
-  "infinite":"無限の交換",
-  "dataSource":"情報元",
-  "discord":"Discord"
+  "worth": "交換の優先度が高い",
+  "otherStages":"他のステージ",
+  "recommend": "加工推奨",
+  "finite":"有限交換",
+  "infinite":"無制限交換",
+  "dataSource":"情報参照元",
+  "discord":"Discord",
+  "local2": "日本語化"
 }
