--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -106,5 +106,6 @@
   "recommend":"建议合成",
   "finite":"有限池",
   "infinite":"无限池",
-  "discord":"加入我们的Discord"
+  "discord":"加入我们的Discord",
+  "local2": "日语化"
 }
