--- a/client/src/lang/zh_Hant.json
+++ b/client/src/lang/zh_Hant.json
@@ -105,5 +105,6 @@
   "finite":"有限兌換",
   "infinite":"無限兌換",
   "dataSource": "數據來源",
-  "discord":"加入我們的Discord"
+  "discord":"加入我們的Discord",
+  "local2": "日語化"
 }
