feat(fix) Japanese transaltion fix

--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -96,9 +96,9 @@
   "stageText": "クエスト",
   "effiText": "効率",
   "local1": "韓国語化",
-  "noteText6": "上記での'育成'の定義はすべてのスキルの特化Ⅲ及びカンストする事を指す。",
+  "noteText6": "上記での'育成'が目的とする到達は全てのスキル特化Ⅲを指す",
   "value": "価値",
-  "higher": "が高い",
+  "higher": "が高く",
   "worth": "交換の優先度が高い",
   "otherStages":"他のステージ",
   "recommend": "加工推奨",
