feat(fix) Japanese transaltion fix

--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -72,11 +72,11 @@
   "greenStore": "一般資格証交換物段・2段目",
   "creditStore": "FP交換所",
   "notes": "説明",
-  "noteText1": "上級資格証・一般資格証・FP交換所での値は、上級資格証：1枚/一般資格証：1/FP：100にて理性値に対応しています。",
-  "noteText2": "ステージNo.後の値は、上から順に、ドロップ率、理性効率、１ドロップごとにかかる統計上の理性。",
-  "noteText3": "【赤】理性効率：99％以上。'育成'するオペレーターが多く残っている場合、このステージの周回が最も消費理性を抑えることができる。",
-  "noteText4": "【橙】理性効率：90％以上。理性消費・時間効率・ドロップ率のバランスが取れたステージ。",
-  "noteText5": "【青】目的素材のドロップ率が高いステージ。使用目的が限られている場合、１素材自体の入手効率は最も高いが、理性の消費が多く、総合的な'育成'効率が悪くなる場合がある",
+  "noteText1": "上級資格証・一般資格証・FP交換所での値は、上級資格証:1枚 / 一般資格証:1 / FP:100　にて計算",
+  "noteText2": "ステージNo.後の値は上から順に、ドロップ率・理性効率・1ドロップごとにかかる統計上の理性。",
+  "noteText3": "【赤】理性効率99％以上。'育成'するオペレーターが多く残っている場合、このステージの周回が最も消費理性を抑えることができる。",
+  "noteText4": "【橙】理性効率90％以上。理性消費・時間効率・ドロップ率のバランスが取れたステージ",
+  "noteText5": "【青】目的素材のドロップ率が高いステージ。使用目的が限られている場合、1素材当たりの時間対入手効率が最も高い。理性の消費が多く、総合的な'育成'効率が悪くなる場合がある",
   "extraDrop": "追加ドロップ",
   "dropRate": "ドロップ率",
   "efficiency": "理性効率",
