fix(i18n) some jp and kr localization errors

--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -93,8 +93,8 @@
   "theme2": "라이트 모드",
   "theme3": " 다크 모드",
   "theme4": "일반 색상",
-  "stageText": "탐구",
-  "effiText": "효율성",
+  "stageText": "스테이지",
+  "effiText": "효율",
   "local1": "한국 현지화 제공",
   "noteText6": " ",
   "value": "가치",
