fix(i18n) korean translation enhancement

--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -101,7 +101,7 @@
   "higher": "더 높다",
   "worth": "교환의 우선 순위가 더 높습니다",
   "otherStages":"다른 퀘스트",
-  "recommend": "권장 합성",
+  "recommend": "합성 추천",
   "finite":"유한 태환",
   "infinite":"무한 태환",
   "dataSource": "데이터 출처",
