--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -49,10 +49,13 @@
   "30115": "聚合剂",
   "30125": "双极纳米片",
   "30135": "D32钢",
+  "30145": "晶体电子单元",
   "31013": "凝胶",
   "31014": "聚合凝胶",
   "31023": "炽合金",
   "31024": "炽合金块",
+  "31033": "晶体元件",
+  "31034": "晶体电路",
   "32001": "芯片助剂",
   "title": "- 明日方舟刷素材一图流",
   "license1": "明日方舟素材一图流采用",
@@ -79,7 +82,7 @@
   "noteText3": "红色：效率>99%, 刷此图毕业所需理智最低",
   "noteText4": "橙色：效率>90%, 且掉率比效率最高的图高",
   "noteText5": "蓝色：掉率最高, 以毕业为目标理智消耗多",
-  
+
   "extraDrop": "额外掉落",
   "dropRate": "材料掉率",
   "efficiency": "理智转化效率",
@@ -102,10 +105,10 @@
   "value": "数值",
   "higher": "越高",
   "worth": "则兑换优先级越高",
-  "otherStages":"其他副本",
-  "recommend":"建议合成",
-  "finite":"有限池",
-  "infinite":"无限池",
-  "discord":"加入我们的Discord",
+  "otherStages": "其他副本",
+  "recommend": "建议合成",
+  "finite": "有限池",
+  "infinite": "无限池",
+  "discord": "加入我们的Discord",
   "local2": "日语化"
 }
