feat(add) Yostar materials

--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -69,11 +69,11 @@
   "local1": "Korean Localization",
   "backend": "Backend",
   "last": "Last updated at",
-  "yellowStore": "Golden Ticket Store",
-  "greenStore": "Second Level in Green Ticket Store",
+  "yellowStore": "Golden Cert Store",
+  "greenStore": "Second Level in Green Cert Store",
   "creditStore": "Credit Point Store",
   "notes": "Notes",
-  "noteText1": "The values listed under green ticket store, golden ticket store or credit point store correspond to sanity values of 1 green ticket, 1 golden ticket or 100 credit points.",
+  "noteText1": "The values listed under green cert store, golden cert store or credit point store correspond to sanity values of 1 green cert, 1 golden cert or 100 credit points.",
   "noteText2": "Starting from top to bottom, the numbers following after stage codes are: drop rate, efficiency of sanity, and expected sanity per drop..",
   "noteText3": "Red: efficiency (of stage) is greater than 99%. Aiming for maxing out all characters, farming in this stage would take least sanity.",
   "noteText4": "Orange: efficiency (of stage) is greater than 90%. The sanity efficiency is balanced for time and drop rate.",
@@ -96,9 +96,12 @@
   "theme4": "Normal colour",
   "stageText": "Stage",
   "effiText": "Efficiency",
+  "effiEventText": "Efficiency (Event Stages)",
+  "effiBaseText": "Efficiency (Including base)",
+  "effiEventBaseText": "Efficiency (Event Stages & Including base)",
   "noteText6": "Maxing out characters means all skills are M3 for all characters. Drop rate is calculated with the expected sanity for certain material",
   "value": "Value",
-  "higher": "is higher",
+  "higher": " is higher",
   "worth": "then the priority of exchange is higher",
   "otherStages":"Other stages",
   "recommend": "via Synthesis",
