--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -76,7 +76,7 @@
   "noteText2": "ステージNo.後の値は上から順に、ドロップ率・理性効率・1ドロップごとにかかる統計上の理性。",
   "noteText3": "【赤】理性効率99％以上。'育成'するオペレーターが多く残っている場合、このステージの周回が最も消費理性を抑えることができる。",
   "noteText4": "【橙】理性効率90％以上。理性消費・時間効率・ドロップ率のバランスが取れたステージ。",
-  "noteText5": "【青】目的素材のドロップ率が高いステージ。使用目的が限られている場合、1素材当たりの時間対入手効率が最も高い。理性の消費が多く、総合的な 育成 効率が悪くなる場合がある。",
+  "noteText5": "【青】目的素材のドロップ率が高いステージ。使用目的が限られている場合、1素材当たりの時間対入手効率が最も高い。理性の消費が多く、総合的な「育成」効率が悪くなる場合がある。",
   "extraDrop": "追加ドロップ",
   "dropRate": "ドロップ率",
   "efficiency": "理性効率",
@@ -106,5 +106,9 @@
   "infinite":"無制限交換",
   "dataSource":"情報参照元",
   "discord":"Discord",
-  "local2": "日本語化"
+  "local2": "日本語化",
+  "effiEventText": "理性効率 (イベントを含む)",
+  "effiBaseText": "理性効率 (基地を含む)",
+  "effiEventBaseText": "理性効率 (イベント・基地を含む)"
+
 }
