fix(bug) orange model store now open

--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -109,5 +109,6 @@
   "infinite":"infinite exchange",
   "dataSource":"Data Source",
   "discord":"Join us on Discord",
-  "local2": "Japanese Localization"
+  "local2": "Japanese Localization",
+  "orange": "Model Store"
 }
