--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -109,6 +109,6 @@
   "local2": "日本語化",
   "effiEventText": "理性効率 (イベントを含む)",
   "effiBaseText": "理性効率 (基地を含む)",
-  "effiEventBaseText": "理性効率 (イベント・基地を含む)"
-
+  "effiEventBaseText": "理性効率 (イベント・基地を含む)",
+  "orange": "Model Store"
 }
