feat(add) friend link

--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -110,5 +110,6 @@
   "effiEventText": "理性効率 (イベントを含む)",
   "effiBaseText": "理性効率 (基地を含む)",
   "effiEventBaseText": "理性効率 (イベント・基地を含む)",
-  "orange": "Model Store"
+  "orange": "Model Store",
+  "friend-link":"Friend Links"
 }
