--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -110,5 +110,6 @@
   "dataSource":"Data Source",
   "discord":"Join us on Discord",
   "local2": "Japanese Localization",
-  "orange": "Model Store"
+  "orange": "Model Store",
+  "friend-link":"Friend Links"
 }
