--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -110,5 +110,6 @@
   "effiEventText": "Efficiency (Event Stages)",
   "effiBaseText": "Efficiency (Including base)",
   "effiEventBaseText": "Efficiency (Event Stages & Including base)",
-  "orange": "Model Store"
+  "orange": "Model Store",
+  "friend-link":"Friend Links"
 }
