--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -114,5 +114,6 @@
   "effiEventText": "效率（包含活动）",
   "effiBaseText": "效率（包含基建）",
   "effiEventBaseText": "效率（包含活动/基建）",
-  "orange": "橙票商店"
+  "orange": "橙票商店",
+  "friend-link":"友情链接"
 }
