feat(add) events

--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -111,5 +111,6 @@
   "discord":"Join us on Discord",
   "local2": "Japanese Localization",
   "orange": "Model Store",
-  "friend-link":"Friend Links"
+  "friend-link":"Friend Links",
+  "oldeventtitle":"Archived Events"
 }
