--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -111,5 +111,6 @@
   "effiBaseText": "理性効率 (基地を含む)",
   "effiEventBaseText": "理性効率 (イベント・基地を含む)",
   "orange": "Model Store",
-  "friend-link":"Friend Links"
+  "friend-link":"Friend Links",
+  "oldeventtitle":"イベント"
 }
