--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -111,5 +111,6 @@
   "effiBaseText": "Efficiency (Including base)",
   "effiEventBaseText": "Efficiency (Event Stages & Including base)",
   "orange": "Model Store",
-  "friend-link":"Friend Links"
+  "friend-link":"Friend Links",
+  "oldeventtitle":"Events"
 }
