--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -115,5 +115,6 @@
   "effiBaseText": "效率（包含基建）",
   "effiEventBaseText": "效率（包含活动/基建）",
   "orange": "橙票商店",
-  "friend-link":"友情链接"
+  "friend-link":"友情链接",
+  "oldeventtitle":"过往活动"
 }
