--- a/client/src/lang/zh_Hant.json
+++ b/client/src/lang/zh_Hant.json
@@ -111,7 +111,8 @@
   "effiBaseText": "效率（包含基建）",
   "effiEventBaseText": "效率（包含活動/基建）",
   "orange": "橙票商店",
-  "friend-link":"友情連結"
+  "friend-link":"友情連結",
+  "oldeventtitle":"過往活動"
   
 
 }
