--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -56,6 +56,10 @@
   "31024": "炽合金块",
   "31033": "晶体元件",
   "31034": "晶体电路",
+  "31053": "化合切削液", 
+  "31054": "切削原液",
+  "31043": "半自然溶剂", 
+  "31044": "精炼溶剂",
   "32001": "芯片助剂",
   "title": "- 明日方舟刷素材一图流",
   "license1": "明日方舟素材一图流采用",
