--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -49,10 +49,13 @@
   "30115": "融合剤",
   "30125": "ナノフレーク",
   "30135": "D32鋼",
+  "30145": "結晶制御装置",
   "31013": "人工ゲル",
   "31014": "融合ゲル",
   "31023": "熾合金",
   "31024": "上級熾合金",
+  "31033": "素子結晶",
+  "31034": "結晶回路",
   "32001": "SoC強化剤",
   "title": "- アークワングラフ",
   "license1": "アークワングラフは",
