feat(add) i18n updates

--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -54,6 +54,9 @@
   "31023": "Incandescent Alloy",
   "31024": "Incandescent Alloy Block",
   "32001": "Chip Catalyst",
+  "30145": "Crystalline Electronic Unit",
+  "31033": "Crystalline Component",
+  "31034": "Crystalline Circuit",
   "title": " ",
   "license1": "ArkOneGraph is licensed under",
   "license2": "CC BY-NC 4.0",
