--- a/client/src/lang/zh_Hant.json
+++ b/client/src/lang/zh_Hant.json
@@ -54,6 +54,9 @@
   "31023": "熾合金",
   "31024": "熾合金塊",
   "32001": "晶片助劑",
+  "30145": "晶體電子單元",
+  "31033": "晶體元件",
+  "31034": "晶體電路",
   "title": "- 明日方舟刷素材一圖流",
   "license1": "明日方舟素材一圖流使用",
   "license2": "知識共享 署名-非商業性使用",
