feat(add) desciprtions for new materials

--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -59,6 +59,11 @@
   "31053": "化合切削液", 
   "31054": "切削原液",
   "31043": "半自然溶剂", 
+  "31055": "烧结核凝晶",
+  "31073": "褐素纤维",
+  "31074": "固化纤维板", 
+  "31083": "环烃聚质",
+  "31084": "环烃预制体", 
   "31044": "精炼溶剂",
   "32001": "芯片助剂",
   "title": "- 明日方舟刷素材一图流",
