translation(fix) added 2 missing materials

--- a/client/src/lang/zh_Hans.json
+++ b/client/src/lang/zh_Hans.json
@@ -66,6 +66,8 @@
   "31084": "环烃预制体", 
   "31044": "精炼溶剂",
   "32001": "芯片助剂",
+  "31063": "转质盐组", 
+  "31064": "转质盐聚块",
   "title": "- 明日方舟刷素材一图流",
   "license1": "明日方舟素材一图流采用",
   "license2": "知识共享 署名-非商业性使用 4.0 国际 许可协议",
