i18n(add) name for new materials

--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -56,6 +56,10 @@
   "30145": "結晶制御装置",
   "31033": "素子結晶",
   "31034": "結晶回路",
+  "31053": "切削液", 
+  "31054": "上級切削液",
+  "31043": "半自然溶剤", 
+  "31044": "精錬溶剤",
   "32001": "SoC強化剤",
   "title": "- アークワングラフ",
   "license1": "アークワングラフは",
