--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -56,6 +56,10 @@
   "30145": "결정 전자 장치",
   "31033": "결정 부품",
   "31034": "결정 회로",
+  "31053": "중합 절삭유", 
+  "31054": "절삭유 원액",
+  "31043": "반합성 용제", 
+  "31044": "정제된 용제",
   "32001": "칩 첨가제",
   "title": "- 명일방주 원그래프",
   "license1": "명일방주 원그래프는",
