--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -57,6 +57,10 @@
   "30145": "Crystalline Electronic Unit",
   "31033": "Crystalline Component",
   "31034": "Crystalline Circuit",
+  "31053": "Compound Cutting Fluid", 
+  "31054": "Cutting Fluid Solution",
+  "31043": "Semi-Synthetic Solvent", 
+  "31044": "Refined Solvent",
   "title": " ",
   "license1": "ArkOneGraph is licensed under",
   "license2": "CC BY-NC 4.0",
