i18n(add) name for new materials

--- a/client/src/lang/en_US.json
+++ b/client/src/lang/en_US.json
@@ -61,6 +61,9 @@
   "31054": "Cutting Fluid Solution",
   "31043": "Semi-Synthetic Solvent", 
   "31044": "Refined Solvent",
+  "30155": "Nucleic Crystal Sinter",
+  "31063": "Transmuted Salt", 
+  "31064": "Transmuted Salt Agglomerate",
   "title": " ",
   "license1": "ArkOneGraph is licensed under",
   "license2": "CC BY-NC 4.0",
