--- a/client/src/lang/ja_JP.json
+++ b/client/src/lang/ja_JP.json
@@ -60,6 +60,9 @@
   "31054": "上級切削液",
   "31043": "半自然溶剤", 
   "31044": "精錬溶剤",
+  "30155": "焼結核凝晶",
+  "31063": "転化塩", 
+  "31064": "上級転化塩",
   "32001": "SoC強化剤",
   "title": "- アークワングラフ",
   "license1": "アークワングラフは",
