--- a/client/src/lang/ko_KR.json
+++ b/client/src/lang/ko_KR.json
@@ -60,6 +60,9 @@
   "31054": "절삭유 원액",
   "31043": "반합성 용제", 
   "31044": "정제된 용제",
+  "30155": "핵결정체 소결물",
+  "31063": "합성 소금 번들", 
+  "31064": "합성 소금 팩",
   "32001": "칩 첨가제",
   "title": "- 명일방주 원그래프",
   "license1": "명일방주 원그래프는",
